fix: Changed variable name to ninety-pc-mobile-width and resized the minimum width of the wrapper container. This will make the spacing between the sides of the content on mobile smaller

--- a/src/pages/advancedSearch/advancedSearch.css
+++ b/src/pages/advancedSearch/advancedSearch.css
@@ -12,7 +12,8 @@
 .advanced-search-text-input {
     margin: 0 0.5rem 0 0.5rem;
     width: 40%;
-    /* max-width: 50rem;
+    min-width: var(--ninety-pc-mobile-width);
+    /* 
     width: 25rem; */
 }
 
